Simplify no_proxy logic
Co-Authored-By: Erin Atkinson <20285458+erindatkinson@users.noreply.github.com>

--- a/modules/cloud-init/templates/proxy.sh.tmpl
+++ b/modules/cloud-init/templates/proxy.sh.tmpl
@@ -1,7 +1,6 @@
 export http_proxy="${proxy_url}"
 export https_proxy="${proxy_url}"
-%{ if repl_cidr == "" ~}
 export no_proxy=10.0.0.0/8,127.0.0.1,169.254.169.254
-% { else ~}
-export no_proxy=10.0.0.0/8,127.0.0.1,169.254.169.254,${repl_cidr}
+%{ if repl_cidr != "" ~}
+export no_proxy=${no_proxy},${repl_cidr}
 %{ endif ~}
