Fix spelling of distribution part 3

--- a/modules/cloud-init/templates/base-cloud-config.yaml.tmpl
+++ b/modules/cloud-init/templates/base-cloud-config.yaml.tmpl
@@ -5,7 +5,7 @@ ssh_import_id:
 - "${username}"
 %{ endfor ~}
 %{ endif ~}
-%{ if distrobution == "ubuntu" ~}
+%{ if distribution == "ubuntu" ~}
 
 packages:
 - jq
