Map Replicated paths from load balancer

--- a/modules/cloud-init/templates/replicated.conf.tmpl
+++ b/modules/cloud-init/templates/replicated.conf.tmpl
@@ -7,7 +7,7 @@
     "LicenseBootstrapAirgapPackagePath": "/var/lib/ptfe/ptfe.airgap",
 %{ endif ~}
     "DaemonAuthenticationType":          "password",
-    "DaemonAuthenticationPassword":      "${console_password}",
+    "DaemonAuthenticationPassword":      "${password}",
     "TlsBootstrapType":                  "self-signed",
     "BypassPreflightChecks":             true,
     "ImportSettingsFrom":                "/etc/replicated-ptfe.conf",
