--- a/modules/cloud-init/templates/base-cloud-config.yaml.tmpl
+++ b/modules/cloud-init/templates/base-cloud-config.yaml.tmpl
@@ -69,6 +69,18 @@ write_files:
   permissions: "0400"
   encoding: b64
   content: "${base64encode(additional_no_proxy)}"
+
+- path: /etc/ptfe/post-install.sh
+  owner: root:root
+  permissions: "0500"
+  encoding: b64
+  content: "${base64encode(postinstall_script)}"
+
+- path: /etc/ptfe/pre-install.sh
+  owner: root:root
+  permissions: "0500"
+  encoding: b64
+  content: "${base64encode(preinstall_script)}"
 %{ if custom_ca_cert_url != "" ~}
 
 - path: /etc/ptfe/custom-ca-cert-url
