--- a/examples/proxy/modules/proxy/templates/cloud-config.yaml.tmpl
+++ b/examples/proxy/modules/proxy/templates/cloud-config.yaml.tmpl
@@ -5,18 +5,20 @@ write_files:
     owner: root:root
     permissions: "0644"
     content: |
-      acl localnet src 10.0.0.0/8 # RFC1918 possible internal network
+      acl localnet src 10.0.0.0/8    # RFC1918 possible internal network
+      acl Safe_ports port 21         # ftp
+      acl Safe_ports port 70         # gopher
+      acl Safe_ports port 80         # http
+      acl Safe_ports port 210        # wais
+      acl Safe_ports port 280        # http-mgmt
+      acl Safe_ports port 443        # application
+      acl Safe_ports port 488        # gss-http
+      acl Safe_ports port 591        # filemaker
+      acl Safe_ports port 777        # multiling http
+      acl Safe_ports port 8085       # install dashboard
+      acl Safe_ports port 1025-65535 # unregistered ports
       acl SSL_ports port 443
-      acl Safe_ports port 80      # http
-      acl Safe_ports port 21      # ftp
-      acl Safe_ports port 443     # https
-      acl Safe_ports port 70      # gopher
-      acl Safe_ports port 210     # wais
-      acl Safe_ports port 1025-65535  # unregistered ports
-      acl Safe_ports port 280     # http-mgmt
-      acl Safe_ports port 488     # gss-http
-      acl Safe_ports port 591     # filemaker
-      acl Safe_ports port 777     # multiling http
+      acl SSL_ports port 8085
       acl CONNECT method CONNECT
       http_access deny !Safe_ports
       http_access deny CONNECT !SSL_ports
