Pin release sequence
Need to pass a root module variable down to the `cloud-init` module so
that a user can pin the release sequence.

--- a/modules/cloud-init/templates/replicated.conf.tmpl
+++ b/modules/cloud-init/templates/replicated.conf.tmpl
@@ -1,6 +1,6 @@
 {
 %{ if release_sequence != "latest" ~}
-    "ReleaseSequence":                   "${release_sequence}",
+    "ReleaseSequence":                   ${release_sequence},
 %{ endif ~}
     "HttpProxy":                         "${proxy_url}",
 %{ if airgap == true ~}
